--- a/aulas/frontend/src/pages/Dashboard/styles.css
+++ b/aulas/frontend/src/pages/Dashboard/styles.css
@@ -19,13 +19,13 @@ ul.spot-list li header {
   border-radius: 4px;
 }
 
-ul.spot-list strong {
+ul.spot-list li strong {
   margin-top: 10px;
   font-size: 24px;
   color: #444;
 }
 
-ul.spot-list span {
+ul.spot-list li span{
   font-size: 15px;
   color: #999;
 }
